add to login and logout and # new model database

--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -1,6 +1,6 @@
 <!-- templates/home.html -->
 {% extends 'base.html' %}
-
+{ % load crispy_forms_tag %}
 {% block content %}
   {% for post in object_list %}
     <div class="post-entry">
